actualizacion en la responsividad de la pagina

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 <body>
 
     <img src="/assets/img/Logo.png" class="logo" alt="">
-    <header class="marco">
-        <h1>Encriptador de mensajes</h1>
-    </header>
+  
+        <h1 class="titulo">Encriptador de mensajes</h1>
+   
    
     <div class="container dos-columnas">
         <div class="texto normal">
             <textarea rows="2" class="encriptar" id="texto" placeholder="Ingrese su texto aqui"></textarea>
-            <div class="">
+            <div class="aviso">
                 <i>&#9888; solo letras minúsculas y sin acentos</i>
                 <div class="botones botones-container">
                     <button class="boton" onclick="encriptar()"> <i class="fa-solid fa-user-secret"></i>
@@ -61,9 +61,7 @@
           
     </div>
 
-    <footer class="footer">
-        <p>Hecho con <i class="fa-solid fa-heart"></i> por <a href="#">Carlos Daniel López González</a></p>
-    </footer>
+   
 
     <script src="/assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/543a80da48.js" crossorigin="anonymous"></script>
