Boton y estilos actualizados

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <img src="/assets/img/Logo.png" class="logo" alt="">
   
-        <h1 class="titulo">Encriptador de mensajes</h1>
+        <h1 class="invert-text">Encriptador de mensajes</h1>
    
    
     <div class="container dos-columnas">
