--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="/Encriptador de mensajes/assets/css/styles.css">
+    <link rel="stylesheet" href="/Encriptador de mensajes/assets/css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -21,7 +21,7 @@
 
 <body>
 
-    <img src="/assets/img/Logo.png" class="logo" alt="">
+    <img src="/Encriptador de mensajes/assets/img/Logo.png" class="logo" alt="logo">
   
         <h1 class="invert-text">Encriptador de mensajes</h1>
    
@@ -41,7 +41,7 @@
         </div>
 
         <div class="texto encriptado">
-            <p class="no-encontrado"  id="encriptado"><img src="/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
+            <p class="no-encontrado"  id="encriptado"><img src="/Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
                 <span>Ningún mensaje fue encontrado</span>
                 Ingresa el texto que desees encriptar o desencriptar.
             </p>
