--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="texto encriptado">
-            <p class="no-encontrado"  id="encriptado"><img src="/Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
+            <p class="no-encontrado"  id="encriptado"> <img src="Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
                 <span>Ningún mensaje fue encontrado</span>
                 Ingresa el texto que desees encriptar o desencriptar.
             </p>
@@ -63,7 +63,7 @@
 
    
 
-    <script src="/assets/js/script.js"></script>
+    <script src="/Encriptador de mensajes/assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/543a80da48.js" crossorigin="anonymous"></script>
 </body>
 
