--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <textarea rows="2" class="encriptar" id="texto" placeholder="Ingrese su texto aqui"></textarea>
             <div class="aviso">
                 <i>&#9888; solo letras minúsculas y sin acentos</i>
-                <div class="botones botones-container">
+                <div class="botones botones-con
+                tainer">
                     <button class="boton" onclick="encriptar()"> <i class="fa-solid fa-user-secret"></i>
                         Encriptar</button>
                     <button class="boton"  onclick="desencriptar()"><i class="fa-solid fa-eye"></i>Desencriptar</button>
@@ -41,7 +42,7 @@
         </div>
 
         <div class="texto encriptado">
-            <p class="no-encontrado"  id="encriptado"> <img src="Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
+            <p class="no-encontrado"  id="encriptado"> <img src="/Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
                 <span>Ningún mensaje fue encontrado</span>
                 Ingresa el texto que desees encriptar o desencriptar.
             </p>
