--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="texto encriptado">
-            <p class="no-encontrado"  id="encriptado"> <img src="../Encriptador de mensajes/assets/img/Muñeco.png" alt="muñeco" class="muñeco">
+            <p class="no-encontrado"  id="encriptado"> <img src="assets/img/Muñeco.png" alt="muñeco" class="muñeco">
                 <span>Ningún mensaje fue encontrado</span>
                 Ingresa el texto que desees encriptar o desencriptar.
             </p>
