--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <img src="../assets/img/Logo.png" class="logo" alt="logo">
+    <img src="../Encriptador de mensajes/assets/img/Logo.png" class="logo" alt="logo">
   
         <h1 class="invert-text">Encriptador de mensajes</h1>
    
